[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/anotherfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Kosugi-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://src/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/BallMainMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/menu_ball_pluc.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=5]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 5 )

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 640, 32 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 360 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 32, 360 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 371 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -157.5
margin_top = 118.0
margin_right = 157.5
margin_bottom = 209.0
theme = SubResource( 4 )
text = "P O N G"
align = 1
valign = 1

[node name="ContainerMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.5
margin_top = -80.0
margin_right = 125.5
margin_bottom = 189.0
theme = SubResource( 1 )

[node name="1P" type="Button" parent="ContainerMenu"]
margin_right = 251.0
margin_bottom = 66.0
size_flags_vertical = 3
text = "1P"

[node name="2P" type="Button" parent="ContainerMenu"]
margin_top = 70.0
margin_right = 251.0
margin_bottom = 136.0
size_flags_vertical = 3
text = "2P"

[node name="Controls" type="Button" parent="ContainerMenu"]
margin_top = 140.0
margin_right = 251.0
margin_bottom = 206.0
size_flags_vertical = 3
text = "Controls"

[node name="FullScreen" type="Button" parent="ContainerMenu"]
visible = false
margin_top = 210.0
margin_right = 251.0
margin_bottom = 276.0
text = "Full S."

[node name="Quit" type="Button" parent="ContainerMenu"]
margin_top = 210.0
margin_right = 251.0
margin_bottom = 276.0
size_flags_vertical = 3
text = "Quit"

[node name="ContainerMenu2" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -80.0
margin_right = 125.0
margin_bottom = 189.0
theme = SubResource( 2 )

[node name="Slow" type="Button" parent="ContainerMenu2"]
margin_right = 250.0
margin_bottom = 66.0
size_flags_vertical = 3
text = "Slow"

[node name="Normal" type="Button" parent="ContainerMenu2"]
margin_top = 70.0
margin_right = 250.0
margin_bottom = 136.0
size_flags_vertical = 3
text = "Normal"

[node name="Fast" type="Button" parent="ContainerMenu2"]
margin_top = 140.0
margin_right = 250.0
margin_bottom = 206.0
size_flags_vertical = 3
text = "Fast"

[node name="Back" type="Button" parent="ContainerMenu2"]
margin_top = 210.0
margin_right = 250.0
margin_bottom = 276.0
size_flags_vertical = 3
text = "Back"

[node name="Controls" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Controls

W/S:
P1

Up/Down:
P2"
align = 1
valign = 1

[node name="Funny" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -31.0
text = "pedrohfmg 2022
grupo de filmes studios"
align = 2

[node name="Wall" type="StaticBody2D" parent="."]

[node name="WallTop" type="CollisionShape2D" parent="Wall"]
position = Vector2( 640, -32 )
shape = SubResource( 6 )

[node name="WallBottom" type="CollisionShape2D" parent="Wall"]
position = Vector2( 640, 752 )
shape = SubResource( 6 )

[node name="WallRight" type="CollisionShape2D" parent="Wall"]
position = Vector2( 1312, 360 )
shape = SubResource( 7 )

[node name="WallLeft" type="CollisionShape2D" parent="Wall"]
position = Vector2( -32, 360 )
shape = SubResource( 8 )

[node name="BallMainMenu" parent="." instance=ExtResource( 4 )]
position = Vector2( 998, 244 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 5 )

[node name="MenuBallStereo" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 647, 376 )
stream = ExtResource( 6 )

[connection signal="pressed" from="ContainerMenu/1P" to="." method="_on_1P_pressed"]
[connection signal="pressed" from="ContainerMenu/2P" to="." method="_on_2P_pressed"]
[connection signal="pressed" from="ContainerMenu/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="ContainerMenu/FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="ContainerMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ContainerMenu2/Slow" to="." method="_on_Slow_pressed"]
[connection signal="pressed" from="ContainerMenu2/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="ContainerMenu2/Fast" to="." method="_on_Fast_pressed"]
[connection signal="pressed" from="ContainerMenu2/Back" to="." method="_on_Back_pressed"]
